apps/cloudnative-pg-operator/networkpolicies/egress-allow-databases.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: egress-allow-databases
  namespace: cloudnative-pg
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
    # Reach every managed database pod cluster-wide: postgres (5432) + instance-manager (8000).
    - toEndpoints:
        - matchExpressions:
            - key: cnpg.io/cluster
              operator: Exists
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "8000"
              protocol: TCP
